--- a/src/sample/start.fxml
+++ b/src/sample/start.fxml
@@ -1,15 +1,30 @@
 <?xml version="1.0" encoding="UTF-8"?>
+
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<VBox prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="sample.Controller">
-
-    <Label text="Tic-Tac-Toe"/>
-    <Button text="Start Game" fx:id="button" onAction="#startButtonClicked"/>
-
-<!--    <fx:define>-->
-<!--        <ToggleGroup fx:id="toggleGroup"/>-->
-<!--    </fx:define>-->
-
-</VBox>
+<SplitPane fx:controller="sample.Controller" dividerPositions="0.5" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" orientation="VERTICAL" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1">
+  <items>
+    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
+         <children>
+            <StackPane prefHeight="195.0" prefWidth="600.0">
+               <children>
+                  <Label text="Tic Tac Toe">
+                     <font>
+                        <Font name="American Typewriter" size="37.0" />
+                     </font>
+                  </Label>
+               </children>
+            </StackPane>
+         </children></AnchorPane>
+    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
+         <children>
+            <StackPane prefHeight="195.0" prefWidth="600.0">
+               <children>
+                  <Button fx:id="button" mnemonicParsing="false" onAction="#startButtonClicked" text="Start Game" />
+               </children>
+            </StackPane>
+         </children></AnchorPane>
+  </items>
+</SplitPane>
