added tie condition, refactored buttonhandler for more readable code

--- a/src/game.fxml
+++ b/src/game.fxml
@@ -18,46 +18,46 @@
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Button fx:id="b1" mnemonicParsing="false" onAction="#gameButtonHandler" prefHeight="100.0" prefWidth="100.0" style="-fx-background-color: #ffffff;">
+            <Button fx:id="b00" mnemonicParsing="false" onAction="#gameButtonHandler" prefHeight="100.0" prefWidth="100.0" style="-fx-background-color: #ffffff;">
                <font>
                   <Font size="30.0" />
                </font></Button>
-            <Button fx:id="b2" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onAction="#gameButtonHandler" prefHeight="100.0" prefWidth="100.0" style="-fx-background-color: #ffffff;" GridPane.columnIndex="1">
+            <Button fx:id="b01" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onAction="#gameButtonHandler" prefHeight="100.0" prefWidth="100.0" style="-fx-background-color: #ffffff;" GridPane.columnIndex="1">
                <font>
                   <Font size="30.0" />
                </font>
             </Button>
-            <Button fx:id="b3" layoutX="110.0" layoutY="10.0" mnemonicParsing="false" onAction="#gameButtonHandler" prefHeight="100.0" prefWidth="100.0" style="-fx-background-color: #ffffff;" GridPane.columnIndex="2">
+            <Button fx:id="b02" layoutX="110.0" layoutY="10.0" mnemonicParsing="false" onAction="#gameButtonHandler" prefHeight="100.0" prefWidth="100.0" style="-fx-background-color: #ffffff;" GridPane.columnIndex="2">
                <font>
                   <Font size="30.0" />
                </font>
             </Button>
-            <Button fx:id="b4" layoutX="210.0" layoutY="10.0" mnemonicParsing="false" onAction="#gameButtonHandler" prefHeight="100.0" prefWidth="100.0" style="-fx-background-color: #ffffff;" GridPane.rowIndex="1">
+            <Button fx:id="b10" layoutX="210.0" layoutY="10.0" mnemonicParsing="false" onAction="#gameButtonHandler" prefHeight="100.0" prefWidth="100.0" style="-fx-background-color: #ffffff;" GridPane.rowIndex="1">
                <font>
                   <Font size="30.0" />
                </font>
             </Button>
-            <Button fx:id="b5" layoutX="10.0" layoutY="110.0" mnemonicParsing="false" onAction="#gameButtonHandler" prefHeight="100.0" prefWidth="100.0" style="-fx-background-color: #ffffff;" GridPane.columnIndex="1" GridPane.rowIndex="1">
+            <Button fx:id="b11" layoutX="10.0" layoutY="110.0" mnemonicParsing="false" onAction="#gameButtonHandler" prefHeight="100.0" prefWidth="100.0" style="-fx-background-color: #ffffff;" GridPane.columnIndex="1" GridPane.rowIndex="1">
                <font>
                   <Font size="30.0" />
                </font>
             </Button>
-            <Button fx:id="b6" layoutX="110.0" layoutY="110.0" mnemonicParsing="false" onAction="#gameButtonHandler" prefHeight="100.0" prefWidth="100.0" style="-fx-background-color: #ffffff;" GridPane.columnIndex="2" GridPane.rowIndex="1">
+            <Button fx:id="b12" layoutX="110.0" layoutY="110.0" mnemonicParsing="false" onAction="#gameButtonHandler" prefHeight="100.0" prefWidth="100.0" style="-fx-background-color: #ffffff;" GridPane.columnIndex="2" GridPane.rowIndex="1">
                <font>
                   <Font size="30.0" />
                </font>
             </Button>
-            <Button fx:id="b7" layoutX="210.0" layoutY="110.0" mnemonicParsing="false" onAction="#gameButtonHandler" prefHeight="100.0" prefWidth="100.0" style="-fx-background-color: #ffffff;" GridPane.rowIndex="2">
+            <Button fx:id="b20" layoutX="210.0" layoutY="110.0" mnemonicParsing="false" onAction="#gameButtonHandler" prefHeight="100.0" prefWidth="100.0" style="-fx-background-color: #ffffff;" GridPane.rowIndex="2">
                <font>
                   <Font size="30.0" />
                </font>
             </Button>
-            <Button fx:id="b8" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onAction="#gameButtonHandler" prefHeight="100.0" prefWidth="100.0" style="-fx-background-color: #ffffff;" GridPane.columnIndex="1" GridPane.rowIndex="2">
+            <Button fx:id="b21" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onAction="#gameButtonHandler" prefHeight="100.0" prefWidth="100.0" style="-fx-background-color: #ffffff;" GridPane.columnIndex="1" GridPane.rowIndex="2">
                <font>
                   <Font size="30.0" />
                </font>
             </Button>
-            <Button fx:id="b9" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onAction="#gameButtonHandler" prefHeight="100.0" prefWidth="100.0" style="-fx-background-color: #ffffff;" GridPane.columnIndex="2" GridPane.rowIndex="2">
+            <Button fx:id="b22" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onAction="#gameButtonHandler" prefHeight="100.0" prefWidth="100.0" style="-fx-background-color: #ffffff;" GridPane.columnIndex="2" GridPane.rowIndex="2">
                <font>
                   <Font size="30.0" />
                </font>
@@ -66,7 +66,17 @@
       </GridPane>
    </center>
    <top>
-      <Pane prefHeight="50.0" prefWidth="50.0" BorderPane.alignment="CENTER" />
+      <Pane prefHeight="50.0" prefWidth="50.0" BorderPane.alignment="CENTER">
+         <children>
+            <StackPane prefHeight="51.0" prefWidth="600.0">
+               <children>
+                  <Label fx:id="winnerLabel" prefHeight="17.0" prefWidth="106.0" text="Current Turn: X">
+                     <font>
+                        <Font name="American Typewriter" size="13.0" />
+                     </font>
+                  </Label>
+               </children></StackPane>
+         </children></Pane>
    </top>
    <left>
       <Pane prefHeight="360.0" prefWidth="150.0" BorderPane.alignment="CENTER" />
